--- a/index.html
+++ b/index.html
@@ -49,67 +49,48 @@
             <img src="./img/karachaev.jpg" alt="Фото Карачаевска" class="cards__photo-places" />
             <div class="cards__subscribe">
               <p class="cards__places-name">Карачаевск</p>
-             
+              <div class="cards__likes"></div>
             </div>
           </div>
           <div class="cards__card">
             <img src="./img/elbrys.jpg" alt="Фото Эльбруса" class="cards__photo-places" />
             <div class="cards__subscribe">
               <p class="cards__places-name">Гора Эльбрус</p>
-              <svg class="cards__likes" width="22" height="19" viewbox="1 -1 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="cards__likes"></div>
+              <!-- <svg class="cards__likes" width="22" height="19" viewBox="1 -1 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   fill-rule="evenodd"
                   clip-rule="evenodd"
                   d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" />
-              </svg>
+              </svg> -->
             </div>
           </div>
           <div class="cards__card">
             <img src="./img/domay.jpg" alt="Фото Домбай" class="cards__photo-places" />
             <div class="cards__subscribe">
               <p class="cards__places-name">Домбай</p>
-              <svg class="cards__likes" width="22" height="19" viewbox="1 -1 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" />
-              </svg>
+              <div class="cards__likes"></div>
             </div>
           </div>
           <div class="cards__card">
             <img src="./img/elbrys.jpg" alt="Фото Эльбруса" class="cards__photo-places" />
             <div class="cards__subscribe">
               <p class="cards__places-name">Гора Эльбрус</p>
-              <svg class="cards__likes" width="22" height="19" viewbox="1 -1 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" />
-              </svg>
+              <div class="cards__likes"></div>
             </div>
           </div>
           <div class="cards__card">
             <img src="./img/domay.jpg" alt="Фото Домбай" class="cards__photo-places" />
             <div class="cards__subscribe">
               <p class="cards__places-name">Домбай</p>
-              <svg class="cards__likes" width="22" height="19" viewbox="1 -1 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" />
-              </svg>
+              <div class="cards__likes"></div>
             </div>
           </div>
           <div class="cards__card">
             <img src="./img/karachaev.jpg" alt="Фото Карачаевска" class="cards__photo-places" />
             <div class="cards__subscribe">
               <p class="cards__places-name">Карачаево-Черкессия</p>
-              <svg class="cards__likes" width="22" height="19" viewbox="1 -1 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" />
-              </svg>
+              <div class="cards__likes"></div>
             </div>
           </div>
         </section>
