--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </footer>
     <div class="popup">
       <div class="popup__content">
-        <button class="popup__close btn"></button>
+        <button type="button" class="popup__close btn"></button>
         <form class="popup__form popup__input-conteiner" name="editForm">
           <h2 class="popup__title">Редактировать профиль</h2>
           <input type="text" class="popup__input input" id="inputName" autocomplete="off" name="fullName" />
