--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
         </div>
         <button class="profile__btn profile__btn_type_add btn" type="button"></button>
       </section>
-      <section class="cards">
-      </section>
+      <section class="cards"></section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&#169; 2023 Mesto Russia</p>
     </footer>
-    <div class="popup popup__edit-block">
+    <div class="popup popup_type_edit-block">
       <div class="popup__content">
         <button type="button" class="popup__close btn"></button>
         <form class="popup__form popup__input-conteiner" name="editForm">
@@ -38,21 +37,21 @@
         </form>
       </div>
     </div>
-    <div class="popup popup__add-block">
+    <div class="popup popup_type_add-block">
       <div class="popup__content">
         <button type="button" class="popup__close btn"></button>
         <form class="popup__form popup__input-conteiner" name="editForm">
           <h2 class="popup__title">Новое место</h2>
-          <input type="text" class="popup__input input" id="inputName" autocomplete="off" name="fullName" placeholder="Название" />
-          <input type="text" class="popup__input input" id="inputJob" autocomplete="off" name="job" placeholder="Ссылка на картинку" />
+          <input type="text" class="popup__input input" id="inputPlaceName" autocomplete="off" name="fullName" placeholder="Название" />
+          <input type="text" class="popup__input input" id="inputLink" autocomplete="off" name="job" placeholder="Ссылка на картинку" />
           <button class="popup__btn btn">Сохранить</button>
         </form>
       </div>
     </div>
-    <div class="popup popup__img-block">
+    <div class="popup popup_type_img-block">
       <div class="popup__content">
         <button type="button" class="popup__close btn"></button>
-        <img class="popup_photo" src="" alt="" />
+        <img class="popup__photo" src="#" alt="" />
         <p class="popup__subtitle"></p>
       </div>
     </div>
@@ -67,7 +66,7 @@
         </div>
       </div>
     </template>
-    
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
