--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <template id="card-template">
       <div class="cards__card">
         <button type="button" class="cards__delete btn"></button>
-        <img src="" alt="" class="cards__photo-places" />
+        <img src="#" alt="" class="cards__photo-places" />
         <div class="cards__subscribe">
           <h2 class="cards__places-name"></h2>
           <button type="button" class="cards__like btn"></button>
