--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="popup popup_type_img-block">
-      <div class="popup__content">
+      <div class="popup__content popup__content_type_img-block">
         <button type="button" class="popup__close btn"></button>
         <img class="popup__photo" src="#" alt="" />
         <p class="popup__subtitle"></p>
