--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <label class="popup__field">
             <input type="text" class="popup__input input" id="inputName" autocomplete="off" name="fullName" required minlength="2" maxlength="40"/>
-            <span class="form__input-error inputName-error"></span>
+            <span class="popup__input-error inputName-error"></span>
           </label>
           <label class="popup__field">
             <input type="text" class="popup__input input" id="inputJob" autocomplete="off" name="job" required minlength="2" maxlength="200"/>
-            <span class="form__input-error inputJob-error"></span>
+            <span class="popup__input-error inputJob-error"></span>
           </label>
           <button class="popup__btn btn" >Сохранить</button>
         </form>
@@ -49,12 +49,12 @@
         <form class="popup__form popup__input-conteiner" name="editForm">
           <h2 class="popup__title">Новое место</h2>
           <label class="popup__field">
-            <input type="text" class="popup__input input" id="inputPlaceName" autocomplete="off" required required minlength="2" maxlength="30" name="placeName" placeholder="Название" />
-            <span class="form__input-error inputPlaceName-error"></span>
+            <input type="text" class="popup__input input" id="inputPlaceName" autocomplete="off" required minlength="2" maxlength="30" name="placeName" placeholder="Название" />
+            <span class="popup__input-error inputPlaceName-error"></span>
           </label>
           <label class="popup__field">
             <input type="url" class="popup__input input" id="inputLink" autocomplete="off" required name="link" placeholder="Ссылка на картинку" />
-            <span class="form__input-error inputLink-error"></span>
+            <span class="popup__input-error inputLink-error"></span>
           </label>
           <button class="popup__btn btn">Сохранить</button>
         </form>
