--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </template>
 
     
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script type="module" src="./scripts/validate.js"></script> -->
   </body>
 </html>
