--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>Mesto</title>
   </head>
   <body class="wrapper">
@@ -17,7 +17,7 @@
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__btn profile__btn_type_edit btn" type="button"></button>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__job">Исследователь ocean</p>
         </div>
         <button class="profile__btn profile__btn_type_add btn" type="button"></button>
       </section>
