--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__btn profile__btn_type_edit btn" type="button"></button>
-          <p class="profile__job">ocean</p>
+          <p class="profile__job">fff ocean</p>
         </div>
         <button class="profile__btn profile__btn_type_add btn" type="button"></button>
       </section>
