--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <div class="popup popup_type_add-block">
       <div class="popup__content">
         <button type="button" class="popup__close btn"></button>
-        <form class="popup__form popup__input-conteiner" name="editForm">
+        <form class="popup__form popup__input-conteiner" name="editForm" novalidate>
           <h2 class="popup__title">Новое место</h2>
           <label class="popup__field">
             <input type="text" class="popup__input input" id="inputPlaceName" autocomplete="off" required minlength="2" maxlength="30" name="name" placeholder="Название" />
