--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,15 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img src="<%=require('./img/avatar.jpg') %> " alt="Фото человека" class="profile__avatar" />
+        <div class="profile__block-avatar">
+          <img src="" alt="Фото человека" class="profile__avatar" />
+          <div class="profile__edit-profile"></div>
+        </div>
+
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"></h1>
           <button class="profile__btn profile__btn_type_edit btn" type="button"></button>
-          <p class="profile__job">Исследователь ocean</p>
+          <p class="profile__job"></p>
         </div>
         <button class="profile__btn profile__btn_type_add btn" type="button"></button>
       </section>
@@ -32,14 +36,14 @@
         <form class="popup__form popup__input-conteiner" name="editForm" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
           <label class="popup__field">
-            <input type="text" class="popup__input input" id="inputName" autocomplete="off" name="fullName" required minlength="2" maxlength="40"/>
+            <input type="text" class="popup__input input" id="inputName" autocomplete="off" name="name" required minlength="2" maxlength="40" />
             <span class="popup__input-error inputName-error"></span>
           </label>
           <label class="popup__field">
-            <input type="text" class="popup__input input" id="inputJob" autocomplete="off" name="job" required minlength="2" maxlength="200"/>
+            <input type="text" class="popup__input input" id="inputJob" autocomplete="off" name="about" required minlength="2" maxlength="200" />
             <span class="popup__input-error inputJob-error"></span>
           </label>
-          <button class="popup__btn btn" >Сохранить</button>
+          <button class="popup__btn btn">Сохранить</button>
         </form>
       </div>
     </div>
@@ -67,6 +71,29 @@
         <p class="popup__subtitle"></p>
       </div>
     </div>
+    <div class="popup popup_type_delete-block">
+      <div class="popup__content">
+        <h2 class="popup__title">Вы уверенны?</h2>
+        <form class="popup__form" name="deleteForm" novalidate>
+          <button class="popup__btn btn" type="submit">Да</button>
+        </form>
+        <button type="button" class="popup__close btn"></button>
+      </div>
+    </div>
+    <!-- avatar -->
+    <div class="popup popup_type_avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close btn"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form class="popup__form" name="editAvatarForm" novalidate>
+          <label class="popup__field">
+            <input id="inputAvatarLink" type="url" name="link" class="popup__input input" placeholder="Ссылка на фото" required autocomplete="off" />
+            <span class="popup__input-error inputAvatarLink-error"></span>
+          </label>
+          <button class="popup__btn btn" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
 
     <template id="card-template">
       <div class="cards__card">
@@ -74,12 +101,15 @@
         <img src="#" alt="" class="cards__photo-places" />
         <div class="cards__subscribe">
           <h2 class="cards__places-name"></h2>
-          <button type="button" class="cards__like btn"></button>
+
+          <div class="cards__like-block">
+            <button type="button" class="cards__like btn"></button>
+            <p class="cards__like-counter">12</p>
+          </div>
         </div>
       </div>
     </template>
 
-    
     <!-- <script type="module" src="./scripts/index.js"></script> -->
     <!-- <script type="module" src="./scripts/validate.js"></script> -->
   </body>
