--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main">
       <section class="profile">
         <div class="profile__block-avatar">
-          <img src="" alt="Фото человека" class="profile__avatar" />
+          <img src="#" alt="Фото человека" class="profile__avatar" />
           <div class="profile__edit-profile"></div>
         </div>
 
